--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-sample",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tomohiron907.github.io/react-sample/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
